--- a/styles.css
+++ b/styles.css
@@ -9,7 +9,7 @@
          url('../fonts/fraunces-v24-latin-700.woff') format('woff'), /* Modern Browsers */
          url('../fonts/fraunces-v24-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
          url('../fonts/fraunces-v24-latin-700.svg#Fraunces') format('svg'); /* Legacy iOS */
-  }
+}
 
 @font-face {
     font-family: 'Montserrat';
@@ -22,9 +22,9 @@
          url('../fonts/montserrat-v25-latin-500.woff') format('woff'), /* Modern Browsers */
          url('../fonts/montserrat-v25-latin-500.ttf') format('truetype'), /* Safari, Android, iOS */
          url('../fonts/montserrat-v25-latin-500.svg#Montserrat') format('svg'); /* Legacy iOS */
-  }
+}
 
-  @font-face {
+@font-face {
     font-family: 'Montserrat';
     font-style: normal;
     font-weight: 700;
@@ -35,13 +35,95 @@
          url('../fonts/montserrat-v25-latin-700.woff') format('woff'), /* Modern Browsers */
          url('../fonts/montserrat-v25-latin-700.ttf') format('truetype'), /* Safari, Android, iOS */
          url('../fonts/montserrat-v25-latin-700.svg#Montserrat') format('svg'); /* Legacy iOS */
-  }
+}
 
-  *, *::before, *::after {
+*, *::before, *::after {
     box-sizing: border-box;
-  }
+}
 
-  .card {
-    width: 375px;
+body {
+    background-color: hsl(30, 38%, 92%);
+}
+
+.card {
+    background-color: hsl(0, 0%, 100%);
+    
+    }
+
+.card__product-category {
+    font-family: 'Montserrat';
+    font-size: 14px;
+    color: hsl(228, 12%, 48%);
+}
+
+.card__product-name {
+    font-family: 'Fraunces';
+    font-size: 20px;
+    color: hsl(212, 21%, 14%);
+}
+
+.card__description {
+    font-family: 'Montserrat';
+    font-size: 14px;
+    color: hsl(228, 12%, 48%);
+}
+
+.card__current-price {
+    font-family: 'Fraunces';
+    font-size: 20px;
+    color: hsl(158, 36%, 37%);
+}
+
+.card__original-price {
+    font-family: 'Montserrat';
+    font-size: 14px;
+    text-decoration: line-through;
+    color: hsl(228, 12%, 48%);
+}
+
+.card__image {
+    width: 100%;
+    object-fit: cover;
+}
+
+.card__cart-btn {
+    font-family: 'Montserrat';
+    font-size: 14px;
+    color: hsl(0, 0%, 100%);
+    background-color: hsl(158, 36%, 37%);
+    border-radius: 5px;
+    width: 300px;
     height: auto;
-  }
+}
+
+.card__cart-btn::before {
+content: url(images/icon-cart.svg);
+
+}
+
+@media (max-width: 499px) {
+
+    .card {
+    min-width: 375px;
+    min-height: 500px;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    }
+
+}
+
+@media (min-width: 500px) {
+    .card {
+        max-width: 1440px;
+        min-height: 500px;
+        border-radius: 10px;
+        display: grid;
+    
+        }
+
+}
+
+
+
+
