--- a/styles.css
+++ b/styles.css
@@ -113,8 +113,6 @@ body {
     padding-bottom: 20px;
 }
 
-
-
 .card__cart-btn {
     font-family: 'Montserrat';
     font-size: 14px;
@@ -123,18 +121,21 @@ body {
     border-radius: 5px;
     width: 100%;
     height: auto;
-    padding: 12px 12px 12px 24px;
+    padding: 15px 15px 15px 50px;
     border: none;
-    
+    position: relative;
 }
 
 .card__cart-btn::before {
 content: url(images/icon-cart.svg);
-padding-right: 10px;
-
+position: absolute;
+right: 200px;
 }
 
-
+.attribution {
+    text-align: center;
+    padding-top: 20px;
+}
 
 @media (max-width: 499px) {
 
