--- a/styles.css
+++ b/styles.css
@@ -61,7 +61,7 @@ body {
 
 .card__product-category {
     font-family: 'Montserrat';
-    font-size: 14px;
+    font-size: 0.875rem;
     color: hsl(228, 12%, 48%);
     letter-spacing: 4px;
 
@@ -69,7 +69,7 @@ body {
 
 .card__product-name {
     font-family: 'Fraunces';
-    font-size: 35px;
+    font-size: 2.1875rem;
     color: hsl(212, 21%, 14%);
    padding-top: 20px;
    padding-bottom: 20px;
@@ -78,7 +78,7 @@ body {
 
 .card__description {
     font-family: 'Montserrat';
-    font-size: 14px;
+    font-size: 0.875rem;
     color: hsl(228, 12%, 48%);
     line-height: 1.5;
     padding-bottom: 20px;
@@ -86,13 +86,13 @@ body {
 
 .card__current-price {
     font-family: 'Fraunces';
-    font-size: 35px;
+    font-size: 2.1875rem;
     color: hsl(158, 36%, 37%);
 }
 
 .card__original-price {
     font-family: 'Montserrat';
-    font-size: 14px;
+    font-size: 0.875rem;
     text-decoration: line-through;
     color: hsl(228, 12%, 48%);
     padding-left: 20px;
@@ -115,7 +115,7 @@ body {
 
 .card__cart-btn {
     font-family: 'Montserrat';
-    font-size: 14px;
+    font-size: 0.875rem;
     color: hsl(0, 0%, 100%);
     background-color: hsl(158, 36%, 37%);
     border-radius: 5px;
@@ -128,8 +128,8 @@ body {
 
 .card__cart-btn::before {
 content: url(images/icon-cart.svg);
-position: absolute;
-right: 200px;
+position: relative;
+right: 20px;
 }
 
 .attribution {
