--- a/styles.css
+++ b/styles.css
@@ -52,7 +52,6 @@ body {
 .card {
     background-color: hsl(0, 0%, 100%);
     border-radius: 10px;
-   
     }
 
 .card__word-container {
@@ -115,7 +114,7 @@ body {
 
 .card__cart-btn {
     font-family: 'Montserrat';
-    font-size: 0.875rem;
+    font-size: 1rem;
     color: hsl(0, 0%, 100%);
     background-color: hsl(158, 36%, 37%);
     border-radius: 5px;
@@ -123,13 +122,14 @@ body {
     height: auto;
     padding: 15px 15px 15px 50px;
     border: none;
-    position: relative;
+  position: relative;
 }
 
 .card__cart-btn::before {
 content: url(images/icon-cart.svg);
 position: relative;
-right: 20px;
+right: 10px;
+top: 2px;
 }
 
 .attribution {
@@ -138,11 +138,9 @@ right: 20px;
 }
 
 @media (max-width: 499px) {
-
     .card {
-    min-width: 375px;
-    min-height: 500px;
-    
+        min-width: 375px;
+        min-height: 500px;
     }
 
 }
@@ -152,7 +150,8 @@ right: 20px;
         max-width: 1440px;
         min-height: 500px;
         display: grid;
-    
+        grid-template-rows: repeat(12, 1fr);
+        grid-template-columns: repeat(12, 1fr);
         }
 
 }
