--- a/styles.css
+++ b/styles.css
@@ -52,6 +52,8 @@ body {
 .card {
     background-color: hsl(0, 0%, 100%);
     border-radius: 10px;
+    max-width: 1440px;
+    min-height: 500px;
     }
 
 .card__word-container {
@@ -137,21 +139,33 @@ top: 2px;
     padding-top: 20px;
 }
 
-@media (max-width: 499px) {
+@media (max-width: 699px) {
     .card {
-        min-width: 375px;
-        min-height: 500px;
+        display: flex;
+        flex-direction: column;
     }
 
 }
 
-@media (min-width: 500px) {
+@media (min-width: 700px) {
+  
     .card {
-        max-width: 1440px;
-        min-height: 500px;
         display: grid;
-        grid-template-rows: repeat(12, 1fr);
-        grid-template-columns: repeat(12, 1fr);
+        grid-template-rows: repeat(8, 1fr);
+        grid-template-columns: repeat(8, 1fr);
+        row-gap: 10px;
+        column-gap: 10px;
+        }
+
+        .card__image {
+            border-radius: 10px 0px 0px 10px;
+            grid-row: 1 / 9;
+            grid-column: 1 / 5;
+        }
+
+        .card__word-container {
+            grid-row: 1 / 9;
+            grid-column: 5 / 8;
         }
 
 }
