--- a/styles.css
+++ b/styles.css
@@ -45,9 +45,13 @@
     margin: 0;
 }
 
+html, body {
+    height: 100%;
+  }
+
 body {
     background-color: hsl(30, 38%, 92%);
-    margin: 30px;
+   margin: 30px;
 }
 
 .card {
@@ -154,6 +158,7 @@ top: 2px;
         display: flex;
         flex-direction: column;
         align-items: center;
+        justify-content: center;
     }
   
     .card {
