--- a/styles.css
+++ b/styles.css
@@ -51,7 +51,7 @@ html, body {
 
 body {
     background-color: hsl(30, 38%, 92%);
-   margin: 30px;
+   
 }
 
 .card {
@@ -59,6 +59,7 @@ body {
     border-radius: 10px;
     max-width: 700px;
     min-height: 500px;
+    margin: 30px;
     }
 
 .card__word-container {
@@ -141,7 +142,6 @@ top: 2px;
 
 .attribution {
     text-align: center;
-    padding-top: 20px;
 }
 
 @media (max-width: 699px) {
@@ -155,6 +155,7 @@ top: 2px;
 @media (min-width: 700px) {
 
     body {
+        margin: 0;
         display: flex;
         flex-direction: column;
         align-items: center;
